# COMIC-Bridge-integrated

./: .gitignore  .prettierrc  CLAUDE.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: architecture.md  data-flow.md  feature-map.md  plugin-app-integration-template.md  recycle-action-recording.md  uxp-auto-launch-guide.md
public/progen/: index.html
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/scripts/: bridge_invoke_command.jsx  bridge_open_panel.jsx  cb_recycle_startup.jsx  cleanup_recycle.jsx  lock_layers.jsx  open_recycle_panel.ps1  register_startup.jsx  setup_recycle_action.jsx  setup_workspace.jsx  test_recycle_panel.jsx  tiff_convert.jsx
src-tauri/src/: commands.rs  kenban.rs  lib.rs  psd_metadata.rs  recycle.rs
src-tauri/windows/: hooks.nsh
src/components/: ErrorBoundary.tsx
src/hooks/: useAppUpdater.ts  useComposeProcessor.ts  useCropEditorKeyboard.ts  useFileWatcher.ts  useFontResolver.ts  useGlobalDragDrop.ts  useHandoff.ts  useHighResPreview.ts  useLayerControl.ts  usePhotoshopConverter.ts  usePreparePsd.ts  useProgenJson.ts  usePsdLoader.ts  useRenameProcessor.ts  useReplaceProcessor.ts  useScanPsdProcessor.ts  useSpecChecker.ts  useSpecConverter.ts  useSplitProcessor.ts  useTextExtract.ts  useTiffProcessor.ts
src/lib/: agPsdScanner.ts  layerMatcher.ts  layerTreeOps.ts  paperSize.ts  progenPrompts.ts  psdLoaderRegistry.ts  textUtils.ts
src/shared/: README.md
src/store/: composeStore.ts  diffStore.ts  fontBookStore.ts  guideStore.ts  (+14 more)
(+272 files in other folders)
