[package]
name = "comic-bridge"
version = "1.5.4"
description = "漫画原稿の入稿チェック・差替え・分割を行うデスクトップアプリ"
authors = ["Ina986"]
edition = "2021"

[lib]
name = "comic_bridge_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image processing
image = "0.25"
psd = "0.3"
thiserror = "1.0"

# PDF rendering
pdfium-render = "0.8"

# Font name resolution (PostScript → display name)
fontdb = "0.22"
ttf-parser = "0.24"

# File system traversal
walkdir = "2"

# File system watching
notify = "7"

# Parallel processing
rayon = "1.10"

# Async runtime
tokio = { version = "1", features = ["rt", "sync"] }

# 開発ビルドでも画像処理を高速化
[profile.dev]
opt-level = 2

[profile.dev.package.image]
opt-level = 3

[profile.dev.package.psd]
opt-level = 3

[profile.dev.package.flate2]
opt-level = 3

[profile.dev.package.miniz_oxide]
opt-level = 3

[profile.dev.package.pdfium-render]
opt-level = 3

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
